; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_disk.c_get_create_time.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_disk.c_get_create_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.stat*)* @get_create_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_create_time(%struct.stat* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.stat*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.stat* %0, %struct.stat** %3, align 8
  %6 = load %struct.stat*, %struct.stat** %3, align 8
  %7 = getelementptr inbounds %struct.stat, %struct.stat* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.stat*, %struct.stat** %3, align 8
  %10 = getelementptr inbounds %struct.stat, %struct.stat* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @MIN(i64 %8, i32 %11)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load %struct.stat*, %struct.stat** %3, align 8
  %15 = getelementptr inbounds %struct.stat, %struct.stat* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call i64 @MIN(i64 %13, i32 %16)
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %1
  %21 = load i64, i64* %5, align 8
  store i64 %21, i64* %2, align 8
  br label %24

22:                                               ; preds = %1
  %23 = load i64, i64* %4, align 8
  store i64 %23, i64* %2, align 8
  br label %24

24:                                               ; preds = %22, %20
  %25 = load i64, i64* %2, align 8
  ret i64 %25
}

declare dso_local i64 @MIN(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
